--- a/style.css
+++ b/style.css
@@ -7,6 +7,16 @@ body{
   height: 100vh;
   font-family: 'Audiowide', cursive;
 }
+button{
+  background-color: #ecda22;
+  border: none;
+  border-radius: 5px;
+  width: 100%;
+  margin-top: 10px;
+  height: 50px;
+  font-family: 'Audiowide', cursive;
+  font-size: 15px;
+}
 .clock {
   display: flex;
   justify-content: center;
@@ -64,25 +74,14 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', e
     transition: transform .2s; 
   }
   .container > div:hover {
-    transform: scale(1.5); 
+    transform: scale(1.1); 
 }
-  
-  .latest-n1{
-      background-image: url(https://assets1.ignimgs.com/2018/08/23/cp2077-1280-gc1-1535024231051_1280w.jpg);
-      
-  }
-  .latest-n2{
-  
-  }
-  .latest-n3{
-    
-  }
-  .latest-n4{
-
-  }
-  .latest-n5{
-    
-  }
+.name{
+  background-color: #303031;
+  border-radius: 20px;
+  padding-left: 40%;
+}
+ 
 
 
 
